# Experiments-in-Music-Creation

./: .gitignore  Midi.mid  MidiOriginal.mid  README.md  activations.py  analysis.py  analysisGrid.py  coldiff.npy  echo.py  error.csv  errorAnalysis.py  gridsearch.csv  midiUtils.py  music.csv  pyproject.toml  testAudibleLength.py
tests/: midiUtilsTest.py
