[tool.poetry]
name = "experiments-in-music-creation"
version = "0.1.0"
description = ""
authors = ["Azis <azuolas.krusna@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.1"
scipy = "^1.10.1"
mido = "^1.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
